<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/tv_inventory_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_app_stage_1"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/text_size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nano_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/android_basic_nanodegree"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/text_size_24"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/tv_inventory_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_udacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/bkg_company"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_48"
        android:paddingTop="@dimen/padding_24"
        android:paddingRight="@dimen/padding_48"
        android:paddingBottom="@dimen/padding_24"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/bkg_company"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_48"
        android:paddingTop="@dimen/padding_24"
        android:paddingRight="@dimen/padding_48"
        android:paddingBottom="@dimen/padding_24"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:background="@drawable/bkg_border"
        android:drawableEnd="@drawable/ic_action_arrow_forward"
        android:drawableRight="@drawable/ic_action_arrow_forward"
        android:drawablePadding="@dimen/padding_48"
        android:paddingLeft="@dimen/padding_48"
        android:paddingRight="@dimen/padding_48"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_inventory_app" />

</android.support.constraint.ConstraintLayout>